--- a/warmup/BUILD
+++ b/warmup/BUILD
@@ -189,15 +189,6 @@ cc_binary(
 )
 
 cc_binary(
-    name = "factor",
-    srcs = ["factor.cc"],
-    copts = [
-        "-Werror",
-        "-std=c++17",
-    ],
-)
-
-cc_binary(
     name = "all_divisors",
     srcs = ["all_divisors.cc"],
     copts = [
@@ -515,6 +506,15 @@ cc_binary(
 cc_binary(
     name = "sqrt",
     srcs = ["sqrt.cc"],
+    copts = [
+        "-Werror",
+        "-std=c++17",
+    ],
+)
+
+cc_binary(
+    name = "dutch_flag",
+    srcs = ["dutch_flag.cc"],
     copts = [
         "-Werror",
         "-std=c++17",
