--- a/codeforces/BUILD
+++ b/codeforces/BUILD
@@ -1,3 +1,5 @@
+load("@rules_cc//cc:defs.bzl", "cc_binary")
+
 #Automatically create a cc_binary for every.cc file in this directory.
 [
     cc_binary(
