--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -65,6 +65,9 @@ go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
 use_repo(
     go_deps,
+    "com_github_awalterschulze_gographviz",
+    "com_github_charmbracelet_bubbletea",
+    "com_github_charmbracelet_lipgloss",
     "com_github_google_generative_ai_go",
     "in_gopkg_yaml_v3",
     "org_golang_google_api",
